[gd_scene load_steps=14 format=3 uid="uid://dkyhb7voldou1"]

[ext_resource type="Script" path="res://characters/CharacterClass.gd" id="1_j0poo"]
[ext_resource type="PackedScene" uid="uid://ckfsbsh4qe3us" path="res://scenes/skill_tree/stree_witch.tscn" id="2_rrqxe"]
[ext_resource type="Script" path="res://characters/witch/scripts/witch_AbilityManager.gd" id="2_xnkl8"]
[ext_resource type="Resource" uid="uid://do0figvykvlcp" path="res://characters/witch/witch_stats.tres" id="2_ygtrj"]
[ext_resource type="Script" path="res://characters/witch/scripts/witch_AttackComponent.gd" id="3_b0vy3"]
[ext_resource type="PackedScene" uid="uid://b8740u5oqxn7d" path="res://projectiles/ice_projectiles/ice_spike/ice_spike.tscn" id="5_of8tm"]
[ext_resource type="Script" path="res://characters/witch/scripts/witch_UltimateComponent.gd" id="5_wu24y"]
[ext_resource type="AudioStream" uid="uid://bwauhc5i6k2iq" path="res://assets/audio/sfx/character_sfx/ice_cast_kr.mp3" id="6_khbv3"]
[ext_resource type="PackedScene" uid="uid://bmykt4bk5s1bk" path="res://projectiles/ice_projectiles/frost_nova/frost_nova.tscn" id="7_5t8dy"]
[ext_resource type="Script" path="res://characters/witch/scripts/witch_AmmoComponent.gd" id="7_jgtmk"]
[ext_resource type="AudioStream" uid="uid://bj0nahh0080ju" path="res://assets/audio/sfx/character_sfx/frost_nova.mp3" id="8_jwyfu"]
[ext_resource type="Texture2D" uid="uid://kdh26376nd2g" path="res://characters/witch/witch_arm.tres" id="9_khmxg"]
[ext_resource type="Texture2D" uid="uid://dmpunjpb4iuff" path="res://assets/sprite_characters/witch weapon.png" id="10_37iad"]

[node name="character_Witch" type="Node2D"]
script = ExtResource("1_j0poo")
stats = ExtResource("2_ygtrj")
charge_type = 2

[node name="AbilityManager" type="Node2D" parent="."]
script = ExtResource("2_xnkl8")

[node name="SkillTree" parent="AbilityManager" instance=ExtResource("2_rrqxe")]

[node name="BasicAttack" type="Node2D" parent="AbilityManager"]
script = ExtResource("3_b0vy3")
IceSpikeScene = ExtResource("5_of8tm")
sfx_IceCast = ExtResource("6_khbv3")

[node name="firerate" type="Timer" parent="AbilityManager/BasicAttack"]
wait_time = 0.2
one_shot = true

[node name="recoil" type="Timer" parent="AbilityManager/BasicAttack"]
wait_time = 0.2
one_shot = true

[node name="Ultimate" type="Node2D" parent="AbilityManager"]
script = ExtResource("5_wu24y")
FrostNovaScene = ExtResource("7_5t8dy")
sfx_FrostNova = ExtResource("8_jwyfu")

[node name="Ammo" type="Node2D" parent="AbilityManager"]
script = ExtResource("7_jgtmk")

[node name="ammo_regen" type="Timer" parent="AbilityManager/Ammo"]
one_shot = true

[node name="Sprite2D_arm" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(-5, 2)
texture = ExtResource("9_khmxg")
offset = Vector2(5, -2)

[node name="Sprite2D_wpn" type="Sprite2D" parent="Sprite2D_arm"]
modulate = Color(1.2, 1.2, 2, 1)
z_index = -1
position = Vector2(1, 13)
rotation = 2.35619
texture = ExtResource("10_37iad")
